--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -20,3 +20,12 @@
   height: 25px;
   width: 25px;
 }
+
+.Header a {
+  height: 27px;
+  width: 27px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
