--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -16,10 +16,10 @@
   width: 25px;
 }
 
-.Header .linkedInLogo {
+/*.Header .linkedInLogo {
   height: 25px;
   width: 25px;
-}
+}*/
 
 .Header .anchors {
   height: 27px;
