--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -5,7 +5,7 @@
 
 .Header .name {
   display: flex;
-  width: 250px;
+  width: 300px;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
@@ -28,4 +28,24 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.Header {
+  /*opacity: 0.8;*/
+}
+
+.navbar-inverse .navbar-brand:focus, .navbar-inverse .navbar-brand:hover {
+  color: #9d9d9d;
+}
+
+.Header h3 {
+  margin: 0;
+}
+
+.navbar-inverse {
+  border-radius: 0;
+}
+
+.Header a:hover {
+  transform: scale(1.6);
 }
