--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -1,28 +1,28 @@
-.Experience {
+.Projects {
   margin-top: 20px;
 }
 
-.Experience span {
+.Projects span {
   float: right;
 }
 
-.Experience .container {
+.Projects .container {
   background-color: #DDD;
   padding: 15px;
   box-shadow: 1px 4px 5px #999;
   /*border: 2px solid black;*/
 }
 
-.Experience h1 {
+.Projects h1 {
   margin: 0;
   padding-left: 15px;
 }
 
-.Experience h3 {
+.Projects h3 {
   padding-left: 15px;
   padding-right: 15px;
 }
 
-.Experience h4 {
+.Projects h4 {
   padding-left: 15px;
 }
