--- a/src/Education/Education.css
+++ b/src/Education/Education.css
@@ -2,6 +2,10 @@
   float: right;
 }
 
+.Education {
+  margin-top: 20px;
+}
+
 .Education .container {
   background-color: #DDD;
   padding: 15px;
@@ -24,4 +28,10 @@
 
 .Education p {
   padding-left: 15px;
+}
+
+@media (max-width: 767px) {
+  .Education .container {
+    margin: 0px 20px 20px 20px;
+  }
 }
