--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -26,3 +26,9 @@
 .Projects h4 {
   padding-left: 15px;
 }
+
+@media (max-width: 767px) {
+  .Projects .container {
+    margin: 0px 20px 20px 20px;
+  }
+}
