Add style adjustments to education

--- a/src/Education/Education.css
+++ b/src/Education/Education.css
@@ -34,4 +34,16 @@
   .Education .container {
     margin: 0px 20px 20px 20px;
   }
+
+}
+
+@media (max-width: 991px) {
+  .Education .school {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .Education .bar {
+    display: none;
+  }
 }
