--- a/src/Experience/Experience.css
+++ b/src/Experience/Experience.css
@@ -32,3 +32,14 @@
     margin: 0px 20px 20px 20px;
   }
 }
+
+@media (max-width: 991px) {
+  .Experience .job {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .Experience .bar {
+    display: none;
+  }
+}
