--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -48,3 +48,9 @@
 .Header a:hover {
   transform: scale(1.1);
 }
+
+@media (max-width: 767px) {
+  .Header .navbar-nav>li>a:hover {
+    transform: scale(1);
+  }
+}
