--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -16,6 +16,10 @@
   width: 25px;
 }
 
+.Header a {
+  color: #9d9d9d;
+}
+
 .Header .linkedInLogo {
   height: 25px;
   width: 25px;
@@ -47,6 +51,9 @@
 
 .Header a:hover {
   transform: scale(1.1);
+  text-decoration: none;
+  color: #fff;
+  cursor: pointer;
 }
 
 @media (max-width: 767px) {
