--- a/src/About/About.css
+++ b/src/About/About.css
@@ -5,7 +5,7 @@
 
 .About .pic {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   height: 200px;
 }
